--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
    <body>
    
       <form name = "form" enctype = "multipart/form-data" 
-         action = "{% url 'SaveProfile'  %}"  method = "POST" >{% csrf_token %}
+         action = "{% url 'saved'  %}"  method = "POST" >{% csrf_token %}
          
          <div style = "max-width:470px;">
             <center>  
