--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
          <div style = "max-width:470px;">
             <center> 
                <input type = "file" style = "margin-left:20%;" 
-                  placeholder = "Picture" name = "picture" />
+                      name = "file" />
             </center>
          </div>
 			
@@ -26,8 +26,8 @@
             <center> 
             
                <button style = "border:0px;background-color:#4285F4; margin-top:8%; 
-                  height:35px; width:80%; margin-left:19%;" type = "submit" value = "Login" >
-                  <strong>Login</strong>
+                  height:35px; width:80%; margin-left:19%;" type = "submit">
+                  <strong>Upload</strong>
                </button>
                
             </center>
